Fixed it for people on mobile

--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ nav {
   background-color: white;
   border: 0.083em solid black;
   text-align: left !important;
-  width: 15%;
+  width: 17%;
   border-radius: 10px;
   display:flex;
   flex-direction: column;
